--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -38,6 +38,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.20
+      - name: Go Build
         run: CGO_ENABLED=0 go build
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
