--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -37,7 +37,9 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.20
+          go-version: 1.20.0
+      - name: Install dependencies
+        run: go get .
       - name: Go Build
         run: CGO_ENABLED=0 go build
       # Install the cosign tool except on PR
