--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,7 @@ name: Docker
 
 on:
   push:
-    branches: [ "main", feature/trace ]
+    branches: [ "main", feature/trace, v1, v2, v3 ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
@@ -68,10 +68,27 @@ jobs:
       # Extract metadata (tags, labels) for Docker
       # https://github.com/docker/metadata-action
       - name: Extract Docker metadata
+        if: github.ref == 'refs/heads/v1'
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-v1
+          tags: |
+            type=sha
+      - name: Extract Docker metadata
+        if: github.ref == 'refs/heads/v2'
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-v2
+          tags: |
+            type=sha
+      - name: Extract Docker metadata
+        if: github.ref == 'refs/heads/v3'
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-v3
           tags: |
             type=sha
 
@@ -103,10 +120,41 @@ jobs:
         run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push.outputs.digest }}
 
       - name: helm tag update
+        if: github.ref == 'refs/heads/v1'
         run: |
+          apk add yq
           git clone --depth 1 https://gustjd887:${{ secrets.GIT_TOKEN }}@github.com/go-bookinfo/helm.git
           cd helm
-          sed -i 's/tag: .*$/tag: "'sha-${GITHUB_SHA::7}'"/g' review/values.yaml
+          yq -i e '.v1.image.tag = "'sha-${GITHUB_SHA::7}'"' review/values.yaml
+          
+          git config user.name "GitHub Actions"
+          git config user.email "action@github.com"
+          git add .
+          git commit --allow-empty -m "tag change"
+          git push origin main
+          
+      - name: helm tag update
+        if: github.ref == 'refs/heads/v2'
+        run: |
+          apk add yq
+          git clone --depth 1 https://gustjd887:${{ secrets.GIT_TOKEN }}@github.com/go-bookinfo/helm.git
+          cd helm
+          yq -i e '.v2.image.tag = "'sha-${GITHUB_SHA::7}'"' review/values.yaml
+          
+          git config user.name "GitHub Actions"
+          git config user.email "action@github.com"
+          git add .
+          git commit --allow-empty -m "tag change"
+          git push origin main
+
+      - name: helm tag update
+        if: github.ref == 'refs/heads/v3'
+        run: |
+          apk add yq
+          git clone --depth 1 https://gustjd887:${{ secrets.GIT_TOKEN }}@github.com/go-bookinfo/helm.git
+          cd helm
+          yq -i e '.v3.image.tag = "'sha-${GITHUB_SHA::7}'"' review/values.yaml
+          
           git config user.name "GitHub Actions"
           git config user.email "action@github.com"
           git add .
