--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,7 +17,7 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}-${{ github.head_ref }}
+  IMAGE_NAME: ${{ github.repository }}
 
 
 jobs:
@@ -39,6 +39,7 @@ jobs:
         with:
           go-version: 1.20.0
       - name: Install dependencies
+        run: echo ${{ github.head_ref }}
         run: go get .
       - name: Go Build
         run: CGO_ENABLED=0 go build
