--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -39,8 +39,9 @@ jobs:
         with:
           go-version: 1.20.0
       - name: Install dependencies
-        run: echo ${{ github.head_ref }}
         run: go get .
+      - name: echo github branch
+        run: echo ${{ github.head_ref }}
       - name: Go Build
         run: CGO_ENABLED=0 go build
       # Install the cosign tool except on PR
