--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -40,8 +40,6 @@ jobs:
           go-version: 1.20.0
       - name: Install dependencies
         run: go get .
-      - name: echo github branch
-        run: echo ${{ github.ref_name }}
       - name: Go Build
         run: CGO_ENABLED=0 go build
       # Install the cosign tool except on PR
@@ -73,7 +71,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ github.ref_name }}
           tags: |
             type=sha
 
@@ -109,7 +107,7 @@ jobs:
           apk add yq
           git clone --depth 1 https://gustjd887:${{ secrets.GIT_TOKEN }}@github.com/go-bookinfo/helm.git
           cd helm
-          yq -i e '.${GITHUB_REF##*/}.image.tag = "'sha-${GITHUB_SHA::7}'"' review/values.yaml
+          yq -i e '.${{ github.ref_name }}.image.tag = "'sha-${GITHUB_SHA::7}'"' review/values.yaml
           
           git config user.name "GitHub Actions"
           git config user.email "action@github.com"
