--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -107,7 +107,7 @@ jobs:
           sudo snap install yq
           git clone --depth 1 https://gustjd887:${{ secrets.GIT_TOKEN }}@github.com/go-bookinfo/helm.git
           cd helm
-          yq -i e '.${{ github.ref_name }}.image.tag = "'sha-${GITHUB_SHA::7}'"' review/values.yaml
+          yq -i e '.image.${{ github.ref_name }}.tag = "'sha-${GITHUB_SHA::7}'"' review/values.yaml
           
           git config user.name "GitHub Actions"
           git config user.email "action@github.com"
